--- a/baseballcards.html
+++ b/baseballcards.html
@@ -4,14 +4,18 @@
 <head>
     <title>Baseball Cards</title>
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
 </head>
 
 <body>
     <header>
+        <script>
+            // let teamName = prompt('What is your favorite baseball team?');
+            // document.write('Your favorite baseball team is ' + teamName + '!!!');
+            getLocation();
+        </script>
+        <h1> Baseball Card Shop</h1>
         <nav>
-            <h1> Baseball Card Shop</h1>
-            <script src="app.js"></script>
-            
             <ul>
                <li>
                     <a href="https://brettf5.github.io/reading-notes">Brett's Home Page</a>
@@ -25,8 +29,7 @@
 
     <main>
         <script>
-            let teamName = prompt('What is your favorite baseball team?')
-            document.write('Your favorite baseball team is ' + teamName + '!!!');
+            locationMessage();
         </script>
 
     <p>
