--- a/baseballcards.html
+++ b/baseballcards.html
@@ -12,7 +12,7 @@
         <script>
             // let teamName = prompt('What is your favorite baseball team?');
             // document.write('Your favorite baseball team is ' + teamName + '!!!');
-            getLocation();
+            let thierLocation = getLocation();
         </script>
         <h1> Baseball Card Shop</h1>
         <nav>
@@ -29,7 +29,7 @@
 
     <main>
         <script>
-            locationMessage();
+           locationMessage(thierLocation);
         </script>
 
     <p>
