--- a/baseballcards.html
+++ b/baseballcards.html
@@ -10,9 +10,7 @@
 <body>
     <header>
         <script>
-            // let teamName = prompt('What is your favorite baseball team?');
-            // document.write('Your favorite baseball team is ' + teamName + '!!!');
-            let thierLocation = getLocation();
+            let theirLocation = getLocation();
         </script>
         <h1> Baseball Card Shop</h1>
         <nav>
@@ -29,7 +27,7 @@
 
     <main>
         <script>
-           locationMessage(thierLocation);
+           locationMessage(theirLocation);
         </script>
 
     <p>
