--- a/baseballcards.html
+++ b/baseballcards.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Baseball Cards</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"></link>
     <script src="app.js"></script>
 </head>
 
