--- a/baseballcards.html
+++ b/baseballcards.html
@@ -15,6 +15,7 @@
             locationCheck(userFrom);
         </script>
         <h1> Baseball Card Shop</h1>
+        <script src="app.js"></script>
         <nav>
             <ul>
                <li>
