--- a/baseballcards.html
+++ b/baseballcards.html
@@ -4,7 +4,7 @@
 <head>
     <title>Baseball Cards</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,6 @@
             locationCheck(userFrom);
         </script>
         <h1> Baseball Card Shop</h1>
-        <script src="app.js"></script>
         <nav>
             <ul>
                <li>
