--- a/baseballcards.html
+++ b/baseballcards.html
@@ -11,8 +11,8 @@
 
     <header>
         <script>
-            let theirLocation = getLocation();
-            locationCheck(userFrom);
+            // let theirLocation = getLocation();
+            // locationCheck(userFrom);
         </script>
         <h1> Baseball Card Shop</h1>
         <nav>
@@ -29,7 +29,9 @@
 
     <main>
         <script>
-           whatLocation(theirLocation);
+        //    whatLocation(theirLocation);
+        let teamName = prompt('What is your favorite baseball team?')
+            document.write('Your favorite baseball team is ' + teamName + '!!!');
         </script>
 
     <p>
