--- a/baseballcards.html
+++ b/baseballcards.html
@@ -11,7 +11,7 @@
 
     <header>
         <script>
-            // let theirLocation = getLocation();
+            let theirLocation = getLocation();
             // locationCheck(userFrom);
         </script>
         <h1> Baseball Card Shop</h1>
@@ -30,8 +30,7 @@
     <main>
         <script>
         //    whatLocation(theirLocation);
-        let teamName = prompt('What is your favorite baseball team?')
-            document.write('Your favorite baseball team is ' + teamName + '!!!');
+
         </script>
 
     <p>
