--- a/baseballcards.html
+++ b/baseballcards.html
@@ -12,6 +12,7 @@
     <header>
         <script>
             let theirLocation = getLocation();
+            document.write("Welcome form " + userFrom + "!!!")
             // locationCheck(userFrom);
         </script>
         <h1> Baseball Card Shop</h1>
