--- a/baseballcards.html
+++ b/baseballcards.html
@@ -12,8 +12,8 @@
     <header>
         <script>
             let theirLocation = getLocation();
-            document.write("Welcome form " + userFrom + "!!!")
-            // locationCheck(userFrom);
+            document.write("Welcome form " + theirLocation + "!!!");
+            whatLocation(theirLocation);
         </script>
         <h1> Baseball Card Shop</h1>
         <nav>
